Footer fix, icon overflow fix
footer is now always on bottom of page.
landing page icon overflow is now hidden.

--- a/stylesheets/sass/private.scss
+++ b/stylesheets/sass/private.scss
@@ -17,6 +17,7 @@
 #logoContainer {
   margin-top: auto;
   margin-bottom: auto;
+  overflow: hidden;
 }
 
 #jumboBackIcon
